# brfss2015-diabetes-sql-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_eda_sql.ipynb  02_risk_factors_sql.ipynb  03_advanced_sql.ipynb
