[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brfss2015-diabetes-sql-analysis"
version = "0.1.0"
description = "Análisis exploratorio SQL sobre el dataset BRFSS 2015 para detección de riesgo de diabetes"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "huggingface_hub>=0.23.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
